--- a/src/components/Background/Background.css
+++ b/src/components/Background/Background.css
@@ -1,14 +1,20 @@
 .background-img {
+  opacity: 0.195;
+  mix-blend-mode: normal;
   position: absolute;
-  inset: 0;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
   z-index: -1;
-  opacity: 0.2;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .background-img img {
   position: absolute;
   width: 100%;
+  height: auto;
+  left: 0px;
   top: -110px;
-  left: 0;
+  z-index: 40;
 }
